--- a/Bryson_preprocess_cars_data_module5.ipynb
+++ b/Bryson_preprocess_cars_data_module5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "649b8a9c",
+   "id": "e9df4b63",
    "metadata": {},
    "source": [
     "Program designed to import cars dataset downloaded from Kaggle and prepare it for implementation in Deep Learning algorithm."
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fb9a1fd",
+   "id": "d950d7e6",
    "metadata": {},
    "source": [
     "Import pandas and sklearn LabelEncoder"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e3b66453",
+   "id": "1a763378",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "057eba79",
+   "id": "f434c196",
    "metadata": {},
    "source": [
     "Import the dataset"
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "33384219",
+   "id": "0048ff61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "872a4682",
+   "id": "cd76c1d8",
    "metadata": {},
    "source": [
     "Get headers for convenience"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "451b2e57",
+   "id": "aaa8154c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79dab6ee",
+   "id": "fe311c49",
    "metadata": {},
    "source": [
     "Test print dataset"
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "00147fc6",
+   "id": "7dc5d3da",
    "metadata": {},
    "outputs": [
     {
@@ -143,16 +143,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7eee10d4",
+   "id": "1766d33a",
    "metadata": {},
    "source": [
-    "For each column, the columns 4, 5, 9, 14, 17, 18, and 29 have numerical values, so skip those, all other columns are categorical, so assign a number to the categorical data"
+    "For each column, the columns 4, 5, 9, 14, 17, 18, and 29 have numerical values, so skip those, all other columns are categorical, so assign a number to the categorical data\n",
+    "\n",
+    "All data types here are categorical, and seem to be complete, as such, I use sklearn preprocessing labelencoder to change the categorical data to numerical"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7b244271",
+   "id": "73b2639a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3603115",
+   "id": "cbb0c2d5",
    "metadata": {},
    "source": [
     "Print preprocessed dataset"
@@ -177,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b23f4186",
+   "id": "e2df161c",
    "metadata": {},
    "outputs": [
     {
